UPDATE: scrollbar style, fix link to product from cart

--- a/b2b/src/App.scss
+++ b/b2b/src/App.scss
@@ -1,3 +1,8 @@
+$color-light: #f7fbfa;
+$color-dark: #202025;
+$color-grey: #5d5d5d;
+$color-grey-light: #e3e3e3;
+
 body {
   padding: 0;
   margin: 0;
@@ -43,4 +48,47 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   appearance: textfield;
   -moz-appearance: textfield;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 100%;
+  background: $color-grey-light;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px $color-grey;
+  background-color: $color-grey-light;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: $color-dark;
+  transition: background-color .3s;
+  box-shadow: inset 0 0 7px $color-grey;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $color-grey;
+  box-shadow: inset 0 0 7px $color-dark;
+}
+
+::-webkit-scrollbar-button:vertical:decrement,
+::-webkit-scrollbar-button:vertical:increment {
+  width: 10px;
+  height: 15px;
+  border-style: solid;
+  border-radius: 50%;
+  transform: rotate(0deg);
+}
+
+::-webkit-scrollbar-button:vertical:decrement {
+  border-width: 0 5px 14px 5px;
+  border-color: transparent transparent $color-dark transparent;
+}
+
+::-webkit-scrollbar-button:vertical:increment {
+  border-width: 14px 5px 0 5px;
+  border-color: $color-dark transparent transparent transparent;
 }
